07_retirement/grade.txt
Grading at Tue Sep  8 10:57:12 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘main’:
retirement.c:86:12: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘rate’
     working.rate=0.045/12;
            ^
The code did not compile!

Overall Grade: F
